--- a/about_me/wwr/site-plan-rafting.html
+++ b/about_me/wwr/site-plan-rafting.html
@@ -10,9 +10,9 @@
 
 <body>
   <header>
-    <h1>[Dryoar] Site Plan</h1>
-    <h2>[Amos Okocha]</h2>
-    <h2>WDD 130-[Fall 2023]</h2>
+    <h1>Dryoar Site Plan</h1>
+    <h2>Amos Okocha</h2>
+    <h2>WDD 130-Fall 2023</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -20,7 +20,12 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>To maintain sustainable growth at all levels of our operations
+      To operate responsible tourism
+      To give the highest quality of service possible to our clientele
+      To involve our local community in our programs
+      To conserve and protect the environment and all that lives within
+      To provide ongoing training for our staff and guides</p>
     <!-- change this -->
 
     <h3>Audience</h3>
@@ -54,10 +59,10 @@
       </tr>
       <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
       <tr>
-        <td class="primary">[#03045E]</td>
-        <td class="secondary">[#0077B6]</td>
-        <td class="accent1">[#00B4d8]</td>
-        <td class="accent2">[#90e0EF]</td>
+        <td class="primary">#03045E</td>
+        <td class="secondary">#0077B6</td>
+        <td class="accent1">#00B4d8</td>
+        <td class="accent2">#90e0EF</td>
       </tr>
     </table>
 
@@ -67,25 +72,27 @@
     <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Think also about which of your colors above you might use for background and font colors. -->
 
     <h4>
-      Heading Font: [Font Name here]
+      Heading Font: Skranji
       <!-- change this -->
     </h4>
     <h4>
-      Paragraph Font: [Font Name here]
+      Paragraph Font: Roboto Condensed
       <!-- change this -->
     </h4>
     <h3>Normal paragraph example</h3>
     <p>
-      The best Whitewater Rafting in Colorado, White Water Rafting Company
-      offers rafting on the Colorado and Roaring Fork Rivers in Glenwood
-      Springs. Since 1974, we have been family owned and operated, rafting the
-      Shoshone section of Glenwood Canyon and beyond.
+      Our roots lie deep in the Kenai River. Our company was one of the first oar powered outfitters to run on the 
+      upper Kenai River, dating back to 1974. For over 40 years we have built our operations to be based upon delivering 
+      superior personal service, hiring only the best guides and using the highest quality, highly maintained equipment to 
+      share the Kenai River with our guests.  We are proud to offer Dryoar river rafting trips,  Dryoar guided fishing and 
+      Dryoar cabin rentals all on the beautiful Upper Kenai River and thru the Kenai National Wildlife Refuge thru our special 
+      use permits.
     </p>
     <h3>Colored paragraph example</h3>
     <p class="colored">
       Trips vary from mild and great for families, to trips exclusively for
       physically fit and experienced rafters. No matter what type of river
-      adventures you are seeking, White Water Rafting Company can make it
+      adventures you are seeking, Dryoar Water Rafting Company can make it
       happen for you.
     </p>
 
@@ -118,7 +125,7 @@
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="C:\Users\AMOS\OneDrive\Documents\byui_wdd_130\about_me\wwr\images\dryoarlogo.png" alt="Logo image"
 
     <h3>[Page 2]</h3>
 
