my latest commit

--- a/about_me/wwr/site-plan-rafting.html
+++ b/about_me/wwr/site-plan-rafting.html
@@ -29,7 +29,9 @@
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>White-water river rafting is a low-cost, mini adventure trip that almost anyone can participate
+       in. White-water rafting excursions can be advertised to the general public as well as schools, 
+       corporations, and clubs to gain customers.</p>
     <!-- change this -->
 
     <hr />
