--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -127,7 +127,7 @@
 
     <h3>Home</h3>
 
-    <img src="C:\Users\AMOS\OneDrive\Documents\byui_wdd_130\about_me\wwr\images\dryoarlogo.png" alt="Logo image"
+    <img src="images/dryoarlogo.png" alt="Dry Oar Logo" alt="Logo image"
 
     <h3>[Page 2]</h3>
 
