--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body>
-    <div id="content"></div>
+    <div id="content">
     <header> <a id="logo_link" href="index.html">
         <img class="logo" src="images/dryoarlogo.png" alt="Dry Oar Logo">
     </a>
@@ -20,7 +20,7 @@
     </header>
     <div id="hero">
         <div id="hero-box">
-            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+            <img class="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
         </div>
         <section id="hero-msg">
             <h1 class="home-title">Have An Adventure</h1>
@@ -47,7 +47,7 @@
             <h2>Rapids</h2>
         </section>
         <div id="background"></div>
-        <img class="mountains" src="images/mountains.jpg" alt="Misty mountains">
+        <img class="mountains" src="images/mountains.jpg" alt="misty mountains">
     <section class="msg">
         <h2>More Than Just The Thrill</h2>
         <p>Enjoy the breathtaking scenery. From valleys, meadows, canyons, and high peaks; it's way more than just the rapids. It's a great way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
@@ -55,7 +55,7 @@
     </section>
     </main>
     <footer>
-        <p>Dry Oar &copy; 20XX - Amos Okocha</p>
+        <p>Dry Oar &copy; 2023 - Amos Okocha</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
@@ -70,5 +70,6 @@
             </a>
         </div>
     </footer>
+    </div>
     </body>
 </html>
