--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Vacations | Dry Oar | Home</title>
-    <link rel="stylesheet" href="styles/style.css">
+    <link  type="text/css" rel="stylesheet" href="styles/styles.css" />
 </head>
 <body>
     <div id="content">
     <header> <a id="logo_link" href="index.html">
-        <img class="logo" src="images/dryoarlogo.png" alt="Dry Oar Logo">
+        <img class="logo" src="images/dryoarlogo.png" alt="Dry Oar Logo" >
     </a>
     <nav>
         <a href="index.html">Home</a>
