--- a/wwr/index.html
+++ b/wwr/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>White Water Vacations | Dry Oar | Home</title>
-    <link  type="text/css" rel="stylesheet" href="styles/styles.css" />
+    <link  type="text/css" rel="stylesheet" href="styles/styles.css" >
 </head>
 <body>
     <div id="content">
