--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -5,14 +5,14 @@
   <head>
     <meta charset="utf-8">
     <title>Site Plan</title>
-    <link type="text/css" rel="stylesheet" href="styles/site-plan.css">
+    <link type="text/css" rel="stylesheet" href="my_styles.css/site-plan.css">
   </head>
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Amosinecap Site Plan</h1>
+      <h2>Amos Okocha</h2>
+      <h2>WDD 130-A2</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -21,17 +21,25 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>With many years of experience in the electronics market,
+        Amosinecap Global Enterprises Nig is poised and dedicated 
+        to renders solutions to the electronics needs of our customers ranging from the
+        latest innovations in televisions, sound systems, refrigeration
+        systems, power generation sets, etc. of impeccable standard to our various clientele. </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>Electronic is a low-cost, average cost and high cost goods which the different strata of the economy can 
+        go for depending on their needs. It goes a long way in making our lives so easy by relieving us of different
+        stress as well as making life easy for us. It could also serve as a source enlightenment for us to what is happening
+        around us.
+      </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/amosinecap-logos.png" alt="Logo image">
       <hr>
       <h2>
         Style Guide
@@ -45,13 +53,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/ef476f-ffd166-06d6a0-118ab2-073b4c" target="_blank">https://coolors.co/ef476f-ffd166-06d6a0-118ab2-073b4c</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">#EF476F</td><td class="secondary">#FFD166</td><td class="accent1">#06D6A0</td><td class="accent2">#118AB2</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -62,22 +70,27 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: [Font Name here]  <!-- change this -->
+        Heading Font: Skranji  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: [Font Name here]  <!-- change this -->
+        Paragraph Font: Roboto Condensed  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
       </h3>
       <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+        With many years of experience in the electronics market, Amosinecap Global Enterprises Nig is poised 
+        and dedicated to renders solutions to the electronics needs of our customersranging from the latest 
+        innovations innovation in televisions, sound systems, refrigeration systems, power generation sets, etc. You welcome to do business with us. 
+
       </p>
       <h3>
         Colored paragraph example
       </h3>
       <p class="colored">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+        Our home electronics demands differ as a result of our different incomes and budgets. Amosinecap is 
+        available 24/7 to give you the electronics solutions you need no matter the income and budget at an 
+        increased satisfaction.
       </p>
 
       <!-- ------------------------Step 10------------------------------ -->
