--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -80,7 +80,7 @@
       </h3>
       <p>
         With many years of experience in the electronics market, Amosinecap Global Enterprises Nig is poised 
-        and dedicated to renders solutions to the electronics needs of our customersranging from the latest 
+        and dedicated to render solutions to the electronics needs of our customers ranging from the latest 
         innovations innovation in televisions, sound systems, refrigeration systems, power generation sets, etc. You welcome to do business with us. 
 
       </p>
