--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -21,19 +21,15 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>With many years of experience in the electronics market,
-        Amosinecap Global Enterprises Nig is poised and dedicated 
-        to renders solutions to the electronics needs of our customers ranging from the
-        latest innovations in televisions, sound systems, refrigeration
-        systems, power generation sets, etc. of impeccable standard to our various clientele. </p>  <!-- change this -->
+      <p>To maintain a sustainable growth at all levels of our business.
+        To operate a sustainable business.
+        To expand our reach globally.
+        To provide our customers with state of the art products which are ISO 14,000 series compliant.
+        To help our customers reduce economic waste. </p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>Electronic is a low-cost, average cost and high cost goods which the different strata of the economy can 
-        go for depending on their needs. It goes a long way in making our lives so easy by relieving us of different
-        stress as well as making life easy for us. It could also serve as a source enlightenment for us to what is happening
-        around us.
-      </p>  <!-- change this -->
+      <p>Our range of produce are needed in homes, schools, churches, hotels, corporations, hotels etc for smooth and effective operations.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
@@ -59,7 +55,11 @@
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">#EF476F</td><td class="secondary">#FFD166</td><td class="accent1">#06D6A0</td><td class="accent2">#118AB2</td></tr>
+        <tr><td class="primary">#EF476F</td>
+          <td class="secondary">#FFD166</td>
+          <td class="accent1">#06D6A0</td>
+          <td class="accent2">#118AB2</td>
+          <td class="accent3">#073B4C</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -70,10 +70,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Skranji  <!-- change this -->
+        Heading Font: Ubuntu  <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Roboto Condensed  <!-- change this -->
+        Paragraph Font: Joti One  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
