--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -29,7 +29,7 @@
 
 
       <h3>Audience</h3>
-      <p>Our range of produce are needed in homes, schools, churches, hotels, corporations, hotels etc for smooth and effective operations.</p>  <!-- change this -->
+      <p>Our range of products are needed in homes, schools, churches, hotels, corporations, hotels etc for smooth and effective operations.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
