--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -104,20 +104,18 @@
     <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. -->
     <nav>
       <a href="#">Home</a>
-      <a href="#">Page2</a>
+      <a href="#">Rivers</a>
       <a href="#">Contact Us</a>
+      <a href="#">FAQS</a>
     </nav>
     <hr />
     <h2>Site Map</h2>
     <div class="sitemap">
       <div class="sm-home">Home</div>
-      <div class="sm-page2">
-        [Page2]
-        <!-- this page will have a name later -->
-      </div>
+      <div class="sm-rivers">Rivers</div>
       <div class="sm-page3">Contact Us</div>
 
-      <div class="top">&nbsp;</div>
+      <div class="sm-faqs">FAQS</div>
       <div class="left">&nbsp;</div>
       <div class="right">&nbsp;</div>
     </div>
@@ -129,9 +127,9 @@
 
     <img src="images/dryoarlogo.png" alt="Dry Oar Logo" alt="Logo image"
 
-    <h3>[Page 2]</h3>
+    <h3>Rivers</h3>
 
-    <!-- <img src="#" alt="page 2 wireframe"> -->
+    <img src="images/wireframe.png" alt="page 2 wireframe"> 
   </main>
 </body>
 
