--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -127,6 +127,7 @@
     <h3>Home</h3>
 
     <img src="images/dryoarlogo.png" alt="Dry Oar Logo" >
+    <img src="images/wireframe.png" alt="Wireframe Sample">
 
     <h4>Main Fork of the Salmon River, Idaho</h4>
     <P class = rivers1 > 
