--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -101,8 +101,9 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="#">Anout Us</a>
+        <a href="#">Services</a>
+        <a href="#">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -112,11 +113,14 @@
         <div class="sm-home">
           Home
         </div>
-        <div class="sm-page2">
-          [Page2] <!-- change this -->
+        <div class="aboutus">
+          About Us <!-- change this -->
         </div>
-        <div class="sm-page3">
-          [Page3]  <!-- change this -->
+        <div class="sm-services">
+          Services  <!-- change this -->
+        </div>
+        <div class="sm-contactus">
+          Contact Us  <!-- change this -->
         </div>
 
         <div class="top">
@@ -137,30 +141,48 @@
         Content
       </h2>
       <h3>Home page</h3>
-      <p>
-        [Written copy for the home page here]
-      </p>
       <p>Images for the Home page</p>
-        <img src="#" alt="image for homepage">
-        <img src="#" alt="image for homepage">
+        <img src="images/my_theme.jpg" alt="image for homepage">
+        <img src="images/amosinecap-logos.png" alt="image for homepage">
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>About Us</h3>
       <p>
-        [Written copy for the Page 2 here]
+        Amosinecap Global Ents Nig was registered was incorporated in Nigeria in the year 2018 with experiences
+        in the supply, maintenance of electronics appliances for the satisfacion of our customers. Our customers
+        are at the forefront of our services and products which is why we render state - of - the - art products 
+        which meet their demands with regards to sustainability, eco-friendliness, and maximum comfort. Our 
+        services bears in mind the ISO 14000 series which takes into account all the needs of environmental 
+        protection and low waste as well as taking into consideration the future.
+       </p>
+       <p>Our track records of products of impeccable standard speaks volume for us as we have delivered to 
+        households, corporate organization and other entities which help the meet meet their demands and needs. 
+        We understand the dynamics and cost of energy within our ecosystem and at such, we have notable lower energy
+        consuming appliances which gives high output with lower energy consumption.</p>
+        
+        <p>Our clientele spans the length and breadth of the nation. This is on the account of trust and confidence 
+          we enjoy from our customers whom we have served. Anywhere you are, we supply to your door step in line 
+          with the standard you desired which is a boost on the good will we enjoy today.</p>
+
+        <p>We equally use our products with our customers. In otherwords, we render after sales support services to our customers. You are not alone with us.
       </p>
+      
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
+        <img src="images/generators1.jpg" alt="generator image">
+        <img src="images/freezer.jpg" alt="freezer image">
 
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>Our Products</h3>
       <p>
-        [Written copy for the Page 3 here]
+        We are distributors to the best electronics brands namely: Haier Thermocool brands, LG, Hisense, Polystar,
+        Skyrun, Bruhm, Panasonic, Samsung etc.
+      </p>
+      <p>Our brands of products are of impeccable and comes with associated warranties should there be a factory
+        defect,
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+        <img src="images/my_fridge.png" alt="fridge sample">
+        <img src="images/washing_machine.jpg" alt="frontload washer">
 
       </ul>
       <hr>
