--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -178,7 +178,7 @@
         Skyrun, Bruhm, Panasonic, Samsung etc.
       </p>
       <p>Our brands of products are of impeccable and comes with associated warranties should there be a factory
-        defect,
+        defect.
       </p>
       <p>Images for the Page 3</p>
         <img src="images/my_fridge.png" alt="fridge sample">
