--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -49,17 +49,17 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/ef476f-ffd166-06d6a0-118ab2-073b4c" target="_blank">https://coolors.co/ef476f-ffd166-06d6a0-118ab2-073b4c</a>
+      Palette URL: <a href="https://coolors.co/palette/f72585-7209b7-3a0ca3-4361ee-4cc9f0" target="_blank">https://coolors.co/palette/f72585-7209b7-3a0ca3-4361ee-4cc9f0</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">#EF476F</td>
-          <td class="secondary">#FFD166</td>
-          <td class="accent1">#06D6A0</td>
-          <td class="accent2">#118AB2</td>
-          <td class="accent3">#073B4C</td></tr>
+        <tr><td class="primary">#7209b7</td>
+          <td class="secondary">#3a0ca3</td>
+          <td class="accent1">#f72585</td>
+          <td class="accent2">#4361ee</td>
+          <td class="accent3">#4cc9f0</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
@@ -101,7 +101,7 @@
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
         <a href="#">Home</a>
-        <a href="#">Anout Us</a>
+        <a href="#">About Us</a>
         <a href="#">Services</a>
         <a href="#">Contact Us</a>
       </nav>
@@ -144,6 +144,13 @@
       <p>Images for the Home page</p>
         <img src="images/my_theme.jpg" alt="image for homepage">
         <img src="images/amosinecap-logos.png" alt="image for homepage">
+      <p>Amosinecap Global Ents  Nig is dedicated to serve you with its vast electronics brands and product 
+        which will serve your demands. As the world is aimed and geared towards sustainability in all aspects ranging from the 
+        practices, the products we use and in all we do, we are poised to serve you with our environmental friendly 
+        products which meet global standard. 
+      </p>
+      <p>While considering all these options and present day demand of comfort or are you condering and option for 
+        your demands in electronics, Amosinecap Global Ents Nig is the right place for all these demands to be met.</p>
 
       </ul>
       <h3>About Us</h3>
@@ -180,10 +187,44 @@
       <p>Our brands of products are of impeccable and comes with associated warranties should there be a factory
         defect.
       </p>
-      <p>Images for the Page 3</p>
+      <p>Our Fridges</p>
         <img src="images/my_fridge.png" alt="fridge sample">
+      <p>Our turbo inverter fridge, up to 50% Energy Saving, Lid-installed Fan, Electronic Control, Super Fast 
+        Freezing, 120 Hours frozen After Power outage, LED Lighting, Door Lock, External Handle.
+      </p>
+
+        <p>Washing Machine</p>
         <img src="images/washing_machine.jpg" alt="frontload washer">
 
+        <p>The Hisense frontload washing machine adjusts wash time based on the weight of our laundry. 
+          Redistributes your laundry inside the drum to ensure smooth and quiet spin operation. All Hisense 
+          washing are built to the highest standards, making any choice you make a smart choice. You can get 
+          the best price of all from us.
+        </p>
+
+      <p>Our Generators</p>
+        <img src="images/generators1.jpg" alt="generator image">
+
+      <p>Our generator set is well designed and high performnace appliance that guarantees steady power supply
+        to your home or office. It has a low noise operation which makes it suitable to use any time of the day.
+        This also ensures you do not need to site it far from your house to be able to enjoy a good night rest. 
+        It has a high power output make possible to power your refridgerators, televisions, light bulbs, air 
+        conditioners, electric pressing iron, pumping machine etc. It also have remote features which reduces 
+        the stress of drawing or using the key to start. With the remote, you can on your generator while 50 
+        meters away. 
+      </p>
+      <p>Freezers</p>
+        <img src="images/freezer.jpg" alt="freezer image">
+       
+      <p>More often times than none, a freezer is one of the electrical appliances that must be found in every 
+        home. There are general home appliances and assessories, which generally contributes to you having a better 
+        stay in your home both for you and your family. This appliances ensure that you get work done better and faster.
+        Freezers are one of such home appliances and we recommend that you have them in your home. A freezer is appliance
+        which helps to preserve food as well as drinks by keeping them really cold and frozen till when you eventually 
+        need to cook or eat them. Preservation by freezing works by preventing the growth of mould or bacteria in your
+        food if kept refrigerated. Food can stay up to days, weeks and even moths without losing their original
+        quality or nutrient.
+      </p>
       </ul>
       <hr>
       <h2>
