--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -239,13 +239,13 @@
       </p>
       <img src="#" alt="home page wireframe">
 
-      <h3>[Page 2]</h3>
+      <h3>About Us</h3>
       <p>         
         [Any additional details about page 2 that the wireframe does not make clear]
       </p>
       <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>Our Products</h3>
       <p>         
         [Any additional details about page 3 that the wireframe does not make clear]
       </p>
