--- a/wwr/index.html
+++ b/wwr/index.html
@@ -56,7 +56,7 @@
     </main>
     </div>
     <footer>
-        <p>Dry Oar &copy; 2023 - Amos Okocha</p>
+        <p>Dry Oar & copyright 2023 - Amos Okocha</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
         <div class="social">
