--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -235,21 +235,21 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        An Overview of Amosinecap Global Ents Nig
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/Personal Homepage.png" alt="home page wireframe">
 
       <h3>About Us</h3>
       <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
+        What we do and who we are
       </p>
-      <img src="#" alt="page 2 wireframe">
+      <img src="images/Personal Page 2.png" alt="page 2 wireframe">
 
       <h3>Our Products</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        Our range of products of impeccable standard for our different customers.
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/Personal page 3.png" alt="page 3 wireframe">
     </main>
   </body>
 
