--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -235,7 +235,7 @@
 
       <h3>Home</h3>
       <p>         
-        An Overview of Amosinecap Global Ents Nig
+        An Overview of Amosinecap Global Ents Nig.
       </p>
       <img src="images/Personal Homepage.png" alt="home page wireframe">
 
