--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -237,19 +237,19 @@
       <p>         
         An Overview of Amosinecap Global Ents Nig.
       </p>
-      <img src="images/Personal Homepage.png" alt="home page wireframe">
+      <img src="images/wireframe homepage.png" alt="home page wireframe">
 
       <h3>About Us</h3>
       <p>         
         What we do and who we are
       </p>
-      <img src="images/Personal Page 2.png" alt="page 2 wireframe">
+      <img src="images/wireframe 2.png" alt="page 2 wireframe">
 
       <h3>Our Products</h3>
       <p>         
         Our range of products of impeccable standard for our different customers.
       </p>
-      <img src="images/Personal page 3.png" alt="page 3 wireframe">
+      <img src="images/Wireframe 3.png" alt="page 3 wireframe">
     </main>
   </body>
 
