--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -237,19 +237,21 @@
       <p>         
         An Overview of Amosinecap Global Ents Nig.
       </p>
-      <img src="images/homepage wire1.png" alt="home page wireframe">
+      <img src="images/homepage.png" alt="home page wireframe">
 
       <h3>About Us</h3>
       <p>         
-        What we do and who we are
+        What we do and who we are      
       </p>
-      <img src="images/wire2.png" alt="page 2 wireframe">
+      <img src="images/page 2.png" alt="page 2 wireframe">
 
       <h3>Our Products</h3>
       <p>         
         Our range of products of impeccable standard for our different customers.
       </p>
-      <img src="images/wire3.png" alt="page 3 wireframe">
+      <img src="images/page 3.png" alt="pa
+      
+      \ge 3 wireframe">
     </main>
   </body>
 
