--- a/wwr/contactus.html
+++ b/wwr/contactus.html
@@ -39,6 +39,9 @@
                 <label for="msg">Message:</label>
                 <textarea id="msg" name="user_message"></textarea>
               </li>
+              <p>
+                <button type="submit">Submit</button>
+              </p>
               <script>
                 // get the feedback div element so we can do something with it.
                 const feedbackElement = document.getElementById('feedback');
