--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -102,7 +102,7 @@
       <nav>
         <a href="#">Home</a>
         <a href="#">About Us</a>
-        <a href="#">Services</a>
+        <a href="#">Our Products</a>
         <a href="#">Contact Us</a>
       </nav>
       <hr>
@@ -116,8 +116,8 @@
         <div class="aboutus">
           About Us <!-- change this -->
         </div>
-        <div class="sm-services">
-          Services  <!-- change this -->
+        <div class="sm-ourproducts">
+          Our Products  <!-- change this -->
         </div>
         <div class="sm-contactus">
           Contact Us  <!-- change this -->
