--- a/my_project/site-plan.html
+++ b/my_project/site-plan.html
@@ -70,10 +70,10 @@
       <!-- Choose a font for your paragraphs (body copy) and headlines. What font(s) have you chosen? Why did you choose what you did?  Make sure to review the list of web safe fonts at W3Schools.org as a starting point.  Think also about which of your colors above you might use for background and font colors. -->
 
       <h4>
-        Heading Font: Ubuntu  <!-- change this -->
+        Heading Font: Joti One <!-- change this -->
       </h4>
       <h4>
-        Paragraph Font: Joti One  <!-- change this -->
+        Paragraph Font: Ubuntu  <!-- change this -->
       </h4>
       <h3>
         Normal paragraph example
@@ -100,10 +100,11 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Our Products</a>
-        <a href="#">Contact Us</a>
+        <a href="index.html">Home</a>
+        <a href="aboutus.html">About Us</a>
+        <a href="ourproducts.html">Our Products</a>
+        <a href="site-plan.html">Site Plan</a>
+        <a href="contactus.html">Contact Us</a>
       </nav>
       <hr>
       <h2>
@@ -118,6 +119,9 @@
         </div>
         <div class="sm-ourproducts">
           Our Products  <!-- change this -->
+        </div>
+        <div class ="sm-iteplan" >
+          Site Plan
         </div>
         <div class="sm-contactus">
           Contact Us  <!-- change this -->
