--- a/my_project/index.html
+++ b/my_project/index.html
@@ -16,8 +16,8 @@
         <nav>
             <a href="index.html">Home</a>
             <a href="aboutus.html">About Us </a>
-            <a href="ourproucts.html">Our Products</a>
-            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="ourproducts.html">Our Products</a>
+            <a href="site-plan.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav> 
         </header>
